# snapper

./: .gitignore  .travis.yml  README.md  Setup.hs  ambiata-snapper.cabal
.github/workflows/: haskell.yml
src/: Snapper.hs
src/Snapper/: Prelude.hs
test/: test.hs
test/Test/: Snapper.hs
