name:                  ambiata-snapper
version:               0.0.1
license:               BSD3
author:                Ambiata <info@ambiata.com>
maintainer:            Ambiata <info@ambiata.com>
copyright:             (c) 2015 Ambiata.
synopsis:              ambiata-snapper
category:              System
cabal-version:         >= 1.8
build-type:            Custom
description:           ambiata-snapper

extra-tmp-files:
                       autom4te.cache
                       config.log
                       config.status
                       include/config.h
                       include/snappy-stubs-public.h

extra-source-files:
                       configure
                       configure.ac
                       include/config.h.in
                       include/snappy-c.h
                       include/snappy-internal.h
                       include/snappy-sinksource.h
                       include/snappy-stubs-internal.h
                       include/snappy-stubs-public.h.in
                       include/snappy.h
                       cbits/snappy-c-raw.cc
                       cbits/snappy-c.cc
                       cbits/snappy-sinksource.cc
                       cbits/snappy-stubs-internal.cc
                       cbits/snappy.cc

library
  build-depends:
                       base                            >= 3          && < 5
                     , ambiata-p
                     , ambiata-x-eithert
                     , bytestring                      == 0.10.*
                     , transformers                    >= 0.4        && < 0.6

  ghc-options:
                       -Wall

  hs-source-dirs:
                       src

  exposed-modules:
                       Paths_ambiata_snapper
                       Snapper

  include-dirs:
                       include

  c-sources:
                       cbits/snappy-c-raw.cc
                       cbits/snappy-c.cc
                       cbits/snappy-sinksource.cc
                       cbits/snappy-stubs-internal.cc
                       cbits/snappy.cc

  cc-options:
                       -O3 -msse4.2

  extra-libraries:
                       stdc++

test-suite test
  type:                exitcode-stdio-1.0

  main-is:             test.hs

  ghc-options:         -Wall -threaded -O2

  hs-source-dirs:
                       test

  build-depends:
                       base                            >= 3          && < 5
                     , ambiata-disorder-core
                     , ambiata-disorder-corpus
                     , ambiata-p
                     , ambiata-snapper
                     , QuickCheck
                     , quickcheck-instances
