name:                  ambiata-snapper
version:               0.0.1
license:               BSD3
license-file:          LICENSE
author:                Ambiata <info@ambiata.com>
maintainer:            Ambiata <info@ambiata.com>
copyright:             (c) 2015 Ambiata.
synopsis:              ambiata-snapper
category:              System
cabal-version:         >= 1.8
build-type:            Configure
description:           Haskell library for compressing / decompressing snappy encoded data.

tested-with:
  GHC==8.0.2,
  GHC==8.2.2,
  GHC==8.4.4,
  GHC==8.6.5,
  GHC==8.8.1

extra-tmp-files:
                       autom4te.cache
                       config.log
                       config.status
                       include/config.h
                       include/snappy-stubs-public.h

extra-source-files:
                       configure
                       configure.ac
                       include/config.h.in
                       include/snappy-c.h
                       include/snappy-internal.h
                       include/snappy-sinksource.h
                       include/snappy-stubs-internal.h
                       include/snappy-stubs-public.h.in
                       include/snappy.h
                       cbits/snappy-c-raw.cc
                       cbits/snappy-c.cc
                       cbits/snappy-sinksource.cc
                       cbits/snappy-stubs-internal.cc
                       cbits/snappy.cc

source-repository head
  type:     git
  location: https://github.com/icicle-lang/snapper.git

library
  build-depends:
                       base                            >= 3          && < 5
                     , bytestring                      >= 0.10       && < 0.13
                     , transformers                    >= 0.4        && < 0.7
                     , transformers-either

  ghc-options:
                       -Wall

  hs-source-dirs:
                       src

  exposed-modules:
                       Snapper
                       Snapper.Prelude

  include-dirs:
                       include

  c-sources:
                       cbits/snappy-c-raw.cc
                       cbits/snappy-c.cc
                       cbits/snappy-sinksource.cc
                       cbits/snappy-stubs-internal.cc
                       cbits/snappy.cc

  if (arch(x86_64))
    cc-options:
                        -msse4.2

  extra-libraries:
                       stdc++

test-suite test
  type:                exitcode-stdio-1.0

  main-is:             test.hs

  ghc-options:         -Wall -threaded

  hs-source-dirs:
                       test

  build-depends:
                       base                            >= 3          && < 5
                     , ambiata-snapper
                     , hedgehog
                     , hedgehog-quickcheck
                     , quickcheck-instances


  other-modules:
                       Test.Snapper